force-app/main/default/objects/Product_Sales_Summary__c/Product_Sales_Summary__c.object-meta.xml
<CustomObject>
    <label>Product Sales Summary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Sales Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sales Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>