force-app/main/default/objects/Product_Sales_Summary__c/fields/ADS__c.field-meta.xml
<CustomField>
    <fullName>ADS__c</fullName>
    <formula>(Full_Year_Estimate__c *(1+ ADS_Growth__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Year ADS $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>