force-app/main/default/objects/Product_Sales_Summary__c/fields/ADS_Dollar_Growth__c.field-meta.xml
<CustomField>
    <fullName>ADS_Dollar_Growth__c</fullName>
    <formula>( (Sales_Plan__c / BD_Y__c ) - (Full_Year_Estimate__c / BD_Y_1__c ))* BD_Y__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Year ADS $ Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>