force-app/main/default/objects/Product_Sales_Summary__c/fields/Annual_Sales_Data__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Sales Data</label>
    <referenceTo>Annual_Sales_Data__c</referenceTo>
    <relationshipLabel>Product Sales Summary</relationshipLabel>
    <relationshipName>Product_Sales_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>