force-app/main/default/objects/Product_Sales_Summary__c/fields/Annual_Sales_Data_formula__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Data_formula__c</fullName>
    <formula>TEXT(YEAR(TODAY())) &amp; Territory_Sales_Master_Data__c &amp; Product_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Sales Data Formula</label>
    <type>Text</type>
</CustomField>