force-app/main/default/objects/Product_Sales_Summary__c/fields/BD_Y_1__c.field-meta.xml
<CustomField>
    <fullName>BD_Y_1__c</fullName>
    <description>for ADS calculations</description>
    <label>BD Y-1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>