force-app/main/default/objects/Product_Sales_Summary__c/fields/BD_Y__c.field-meta.xml
<CustomField>
    <fullName>BD_Y__c</fullName>
    <label>BD Y</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>