force-app/main/default/objects/Product_Sales_Summary__c/fields/Business_Plan__c.field-meta.xml
<CustomField>
    <fullName>Business_Plan__c</fullName>
    <label>Business Plan</label>
    <referenceTo>Business_Plan__c</referenceTo>
    <relationshipLabel>Product Sales Summary</relationshipLabel>
    <relationshipName>Product_Sales_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>