force-app/main/default/objects/Product_Sales_Summary__c/fields/CY_ADS_Growth_Est__c.field-meta.xml
<CustomField>
    <fullName>CY_ADS_Growth_Est__c</fullName>
    <formula>((Full_Year_Estimate__c/ BD_Y_1__c ) -  (Annual_Sales_Data__r.Y_1_Sales__c /  BD_Y_2__c)) / (Annual_Sales_Data__r.Y_1_Sales__c /  BD_Y_2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY ADS % Growth Est.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>