force-app/main/default/objects/Product_Sales_Summary__c/fields/CY_Full_Year_Estimate__c.field-meta.xml
<CustomField>
    <fullName>CY_Full_Year_Estimate__c</fullName>
    <label>CY Full Year Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>