force-app/main/default/objects/Product_Sales_Summary__c/fields/CY_Growth__c.field-meta.xml
<CustomField>
    <fullName>CY_Growth__c</fullName>
    <label>CY % Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>