force-app/main/default/objects/Product_Sales_Summary__c/fields/CY_to_Target__c.field-meta.xml
<CustomField>
    <fullName>CY_to_Target__c</fullName>
    <label>CY % to Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>