force-app/main/default/objects/Product_Sales_Summary__c/fields/Full_Year_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_Estimate__c</fullName>
    <formula>IF( Product_Group__c &lt;&gt; &apos;Total&apos;, 
Annual_Sales_Data__r.This_Year_YTD_Sales_Thru_Month__c +  This_Quarter_Projection__c, 
Business_Plan__r.BP_Sales_Plan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Year Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>