force-app/main/default/objects/Product_Sales_Summary__c/fields/Full_Year_Target_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_Target_Attainment__c</fullName>
    <formula>Annual_Sales_Data__r.Full_Year_Target__c /  Full_Year_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Year Target Attainment</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>