force-app/main/default/objects/Product_Sales_Summary__c/fields/Last_Year_Actual__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Actual__c</fullName>
    <formula>Annual_Sales_Data__r.Y_1_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>