force-app/main/default/objects/Product_Sales_Summary__c/fields/National_Average__c.field-meta.xml
<CustomField>
    <fullName>National_Average__c</fullName>
    <description>National Average for pricing for specific product group</description>
    <label>National Average</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>