force-app/main/default/objects/Product_Sales_Summary__c/fields/Next_Year_ADS_Growth__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_ADS_Growth__c</fullName>
    <label>Next Year ADS % Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>