force-app/main/default/objects/Product_Sales_Summary__c/fields/Next_Year_YTD_Growth__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_YTD_Growth__c</fullName>
    <label>Next Year YTD $ Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>