force-app/main/default/objects/Product_Sales_Summary__c/fields/Planned_Growth__c.field-meta.xml
<CustomField>
    <fullName>Planned_Growth__c</fullName>
    <formula>Sales_Plan__c -  Full_Year_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned $ Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>