force-app/main/default/objects/Product_Sales_Summary__c/fields/Planned_Growth_Percent__c.field-meta.xml
<CustomField>
    <fullName>Planned_Growth_Percent__c</fullName>
    <formula>IF( Full_Year_Estimate__c  &lt;&gt; 0,  (Sales_Plan__c /Full_Year_Estimate__c) -1  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned % Growth</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>