force-app/main/default/objects/Product_Sales_Summary__c/fields/Pricing_Impact__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Impact__c</fullName>
    <label>Base Pricing % Impact</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>