force-app/main/default/objects/Product_Sales_Summary__c/fields/Pricing_Impact_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Impact_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>