force-app/main/default/objects/Product_Sales_Summary__c/fields/Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Sales_Plan__c</fullName>
    <formula>Full_Year_Estimate__c + (Full_Year_Estimate__c *  Pricing_Impact__c ) + (Full_Year_Estimate__c *   Vol_Mix_Impact__c  ) +Opportunities__c  +  Risks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>