force-app/main/default/objects/Product_Sales_Summary__c/fields/This_Quarter_Projection__c.field-meta.xml
<CustomField>
    <fullName>This_Quarter_Projection__c</fullName>
    <label>This Quarter Projection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>