force-app/main/default/objects/Product_Sales_Summary__c/fields/This_year_Growth_Percent__c.field-meta.xml
<CustomField>
    <fullName>This_year_Growth_Percent__c</fullName>
    <formula>( Full_Year_Estimate__c -  Annual_Sales_Data__r.Y_1_Sales__c )/ Annual_Sales_Data__r.Y_1_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This year % Growth</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>