force-app/main/default/objects/Product_Sales_Summary__c/fields/This_Year_Target__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Target__c</fullName>
    <formula>Annual_Sales_Data__r.Full_Year_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>