force-app/main/default/objects/Product_Sales_Summary__c/fields/Vol_Mix_Impact__c.field-meta.xml
<CustomField>
    <fullName>Vol_Mix_Impact__c</fullName>
    <description>Input by Territory</description>
    <label>Base Vol/Mix % Impact</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>