force-app/main/default/objects/Product_Sales_Summary__c/fields/Y_3_Sales__c.field-meta.xml
<CustomField>
    <fullName>Y_3_Sales__c</fullName>
    <formula>Annual_Sales_Data__r.Y_3_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y-3 Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>