force-app/main/default/objects/Product_Sales_Summary__c/fields/YTD_Price_Impact__c.field-meta.xml
<CustomField>
    <fullName>YTD_Price_Impact__c</fullName>
    <description>Pricing Impact provided to territory</description>
    <label>YTD Price Impact</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>