force-app/main/default/objects/Product_Sales_Summary__c/fields/YTD_Vol_Mix_Impact__c.field-meta.xml
<CustomField>
    <fullName>YTD_Vol_Mix_Impact__c</fullName>
    <description>YTD Vol/Mix Impact provided to territory</description>
    <label>YTD Vol/Mix Impact</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>